# naviros-ros2-navigation

./: README.md
install/: local_setup.sh  setup.sh
install/serial_motor_demo/lib/serial_motor_demo/: driver_node  laser_sync  odom_node  teleop_wasd
install/serial_motor_demo/share/serial_motor_demo/: package.sh
install/serial_motor_demo/share/serial_motor_demo/config/: mapper_lidar_only.yaml  mapper_params_online_async.yaml
log/: latest_build
src/serial_motor_demo/: CMakeLists.txt  mapper_lidar_only.yaml  package.xml  setup.py
src/serial_motor_demo/config/: nav2_params.yaml
src/serial_motor_demo/launch/: nav2_launch.py  robot_slam_launch.py
src/serial_motor_demo/serial_motor_demo/: driver_node.py
src/serial_motor_demo/src/: odom_node.cpp
